test/corpus/fail/M0172.mo
=========
M0172.mo
=========

to_candid(1) : Nat

---

(source_file
  (exp_dec
    (annot_exp_object
      (to_candid_exp
        (lit_exp
          (int_literal)))
      (path_typ
        (typ_path
          (type_identifier))))))
